AB#6685 user detail layout and spacing altered, and selections fixed
Drop down selectors were not behaving the way they should of so that got fixed
and the layout of the sections to be more consistent with different sized screens

--- a/src/components/UsersV2/RowRender/RowAndCell.css
+++ b/src/components/UsersV2/RowRender/RowAndCell.css
@@ -28,5 +28,4 @@
     padding: 20px;
     border-radius: 6px;
     height: 530px;
-    min-width: 550px;
     }
